@@ -27,31 +27,18 @@ import eu.tsystems.mms.tic.testframework.constants.Browsers;
 import eu.tsystems.mms.tic.testframework.enums.Position;
 import eu.tsystems.mms.tic.testframework.exceptions.SetupException;
 import eu.tsystems.mms.tic.testframework.exceptions.SystemException;
-import eu.tsystems.mms.tic.testframework.internal.StopWatch;
-import eu.tsystems.mms.tic.testframework.internal.utils.DriverStorage;
+import eu.tsystems.mms.tic.testframework.internal.metrics.MetricsController;
+import eu.tsystems.mms.tic.testframework.internal.metrics.MetricsType;
 import eu.tsystems.mms.tic.testframework.logging.Loggable;
 import eu.tsystems.mms.tic.testframework.pageobjects.internal.core.DesktopGuiElementCore;
 import eu.tsystems.mms.tic.testframework.pageobjects.internal.core.GuiElementCore;
 import eu.tsystems.mms.tic.testframework.pageobjects.internal.core.GuiElementData;
 import eu.tsystems.mms.tic.testframework.report.model.context.SessionContext;
-import eu.tsystems.mms.tic.testframework.report.utils.ExecutionContextUtils;
 import eu.tsystems.mms.tic.testframework.testing.TestControllerProvider;
 import eu.tsystems.mms.tic.testframework.testing.WebDriverManagerProvider;
-import eu.tsystems.mms.tic.testframework.utils.DefaultCapabilityUtils;
-import eu.tsystems.mms.tic.testframework.utils.FileUtils;
 import eu.tsystems.mms.tic.testframework.utils.Sleepy;
 import eu.tsystems.mms.tic.testframework.utils.TimerUtils;
 import eu.tsystems.mms.tic.testframework.webdriver.WebDriverFactory;
-import eu.tsystems.mms.tic.testframework.webdrivermanager.desktop.WebDriverMode;
-import java.io.File;
-import java.lang.reflect.Constructor;
-import java.net.URL;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.concurrent.TimeUnit;
-import net.anthavio.phanbedder.Phanbedder;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.Dimension;
 import org.openqa.selenium.Point;
@@ -64,58 +51,33 @@ import org.openqa.selenium.firefox.FirefoxDriver;
 import org.openqa.selenium.firefox.FirefoxOptions;
 import org.openqa.selenium.ie.InternetExplorerDriver;
 import org.openqa.selenium.ie.InternetExplorerOptions;
-import org.openqa.selenium.phantomjs.PhantomJSDriver;
-import org.openqa.selenium.phantomjs.PhantomJSDriverService;
-import org.openqa.selenium.remote.BrowserType;
-import org.openqa.selenium.remote.CapabilityType;
-import org.openqa.selenium.remote.DesiredCapabilities;
+import org.openqa.selenium.remote.AbstractDriverOptions;
+import org.openqa.selenium.remote.CommandExecutor;
 import org.openqa.selenium.remote.HttpCommandExecutor;
 import org.openqa.selenium.remote.LocalFileDetector;
 import org.openqa.selenium.remote.RemoteWebDriver;
+import org.openqa.selenium.remote.http.ClientConfig;
 import org.openqa.selenium.safari.SafariDriver;
 import org.openqa.selenium.safari.SafariOptions;
 import org.openqa.selenium.support.events.EventFiringWebDriver;
+
+import java.lang.reflect.Constructor;
+import java.net.URL;
+import java.time.Duration;
+import java.util.Date;
+import java.util.List;
 
 public class DesktopWebDriverFactory implements
         WebDriverFactory,
         Loggable,
         WebDriverManagerProvider,
         TestControllerProvider,
-        Sleepy
-{
+        Sleepy {
     //public static final TimingInfosCollector STARTUP_TIME_COLLECTOR = new TimingInfosCollector();
-
-    private static File phantomjsFile = null;
 
     @Override
     public WebDriver createWebDriver(WebDriverRequest request, SessionContext sessionContext) {
-        return startSession((DesktopWebDriverRequest)request, sessionContext);
-    }
-
-    private WebDriver startSession(DesktopWebDriverRequest desktopWebDriverRequest, SessionContext sessionContext) {
-
-        /*
-        if there is a factories entry for the requested browser, then create the new (raw) instance here and wrap it directly in EventFiringWD
-         */
-        if (Testerra.Properties.REUSE_DATAPROVIDER_DRIVER_BY_THREAD.asBool()) {
-            String threadName = Thread.currentThread().getId() + "";
-            String testMethodName = ExecutionContextUtils.getMethodNameFromCurrentTestResult();
-            WebDriver driver = DriverStorage.getDriverByTestMethodName(testMethodName, threadName);
-            if (driver != null) {
-                log().info("Re-Using WebDriver for " + testMethodName + ": " + threadName + " driver: " + driver);
-
-                // cleanup session
-                driver.manage().deleteAllCookies();
-                return driver;
-            } else {
-                return newWebDriver(desktopWebDriverRequest, sessionContext);
-            }
-        } else {
-            /*
-            regular branch to create a new web driver session
-             */
-            return newWebDriver(desktopWebDriverRequest, sessionContext);
-        }
+        return newWebDriver((DesktopWebDriverRequest) request, sessionContext);
     }
 
     @Override
@@ -136,10 +98,6 @@ public class DesktopWebDriverFactory implements
         switch (browser) {
             case Browsers.firefox:
                 FirefoxOptions firefoxOptions = new FirefoxOptions();
-//                if (capabilities.getCapabilityNames().contains(FirefoxOptions.FIREFOX_OPTIONS)) {
-//                    final TreeMap predefinedFirefoxOptions = (TreeMap) capabilities.getCapability(FirefoxOptions.FIREFOX_OPTIONS);
-//                    predefinedFirefoxOptions.forEach((s, o) -> firefoxOptions.setCapability(s.toString(), o));
-//                }
                 WEB_DRIVER_MANAGER.getUserAgentConfig(browser).ifPresent(userAgentConfig -> {
                     userAgentConfig.configure(firefoxOptions);
                 });
@@ -156,33 +114,14 @@ public class DesktopWebDriverFactory implements
             case Browsers.chrome:
             case Browsers.chromeHeadless:
                 ChromeOptions chromeOptions = new ChromeOptions();
-//                if (capabilities.getCapabilityNames().contains(ChromeOptions.CAPABILITY)) {
-//                    final TreeMap predefinedChromeOptions = (TreeMap) capabilities.getCapability(ChromeOptions.CAPABILITY);
-//                    predefinedChromeOptions.forEach((s, o) -> chromeOptions.setCapability(s.toString(), o));
-//                }
-
                 WEB_DRIVER_MANAGER.getUserAgentConfig(browser).ifPresent(userAgentConfig -> {
                     userAgentConfig.configure(chromeOptions);
                 });
-
                 chromeOptions.addArguments("--no-sandbox");
                 if (browser.equals(Browsers.chromeHeadless)) {
-                    chromeOptions.setHeadless(true);
+                    chromeOptions.addArguments("--headless");
                 }
                 userAgentCapabilities = chromeOptions;
-                break;
-            case Browsers.phantomjs:
-                File phantomjsFile = getPhantomJSBinary();
-                DesiredCapabilities phantomJsOptions = new DesiredCapabilities();
-                phantomJsOptions.setCapability(PhantomJSDriverService.PHANTOMJS_EXECUTABLE_PATH_PROPERTY, phantomjsFile.getAbsolutePath());
-                phantomJsOptions.setBrowserName(BrowserType.PHANTOMJS);
-                phantomJsOptions.setJavascriptEnabled(true);
-
-                String[] args = {
-                        "--ssl-protocol=any"
-                };
-                phantomJsOptions.setCapability(PhantomJSDriverService.PHANTOMJS_CLI_ARGS, args);
-                userAgentCapabilities = phantomJsOptions;
                 break;
             case Browsers.safari:
                 SafariOptions safariOptions = new SafariOptions();
@@ -200,21 +139,19 @@ public class DesktopWebDriverFactory implements
                 break;
         }
 
-        DesiredCapabilities desiredCapabilities = finalRequest.getDesiredCapabilities();
+        // Any additional defined desired capabilities are merged into browser options
         if (userAgentCapabilities != null) {
-            desiredCapabilities.merge(userAgentCapabilities);
+            userAgentCapabilities = userAgentCapabilities.merge(finalRequest.getDesiredCapabilities());
+            userAgentCapabilities = userAgentCapabilities.merge(finalRequest.getMutableCapabilities());
+            finalRequest.setCapabilities(userAgentCapabilities);
         }
-        finalRequest.getPlatformName().ifPresent(s -> {
-            desiredCapabilities.setCapability(CapabilityType.PLATFORM, s);
-            desiredCapabilities.setCapability(CapabilityType.PLATFORM_NAME, s);
-        });
         return finalRequest;
     }
 
     @Override
     public void setupNewWebDriverSession(EventFiringWebDriver eventFiringWebDriver, SessionContext sessionContext) {
 
-        DesktopWebDriverRequest desktopWebDriverRequest = (DesktopWebDriverRequest)sessionContext.getWebDriverRequest();
+        DesktopWebDriverRequest desktopWebDriverRequest = (DesktopWebDriverRequest) sessionContext.getWebDriverRequest();
         final String browser = desktopWebDriverRequest.getBrowser();
 
         // add event listeners
@@ -228,13 +165,12 @@ public class DesktopWebDriverFactory implements
             WebDriverManager.getConfig().getBaseUrl().ifPresent(desktopWebDriverRequest::setBaseUrl);
         }
 
-        /*
-         start StopWatch
-          */
         desktopWebDriverRequest.getBaseUrl().ifPresent(baseUrl -> {
             try {
-                StopWatch.startPageLoad(eventFiringWebDriver);
+                MetricsController metricsController = Testerra.getInjector().getInstance(MetricsController.class);
+                metricsController.start(sessionContext, MetricsType.BASEURL_LOAD);
                 eventFiringWebDriver.get(baseUrl.toString());
+                metricsController.stop(sessionContext, MetricsType.BASEURL_LOAD);
             } catch (Exception e) {
                 log().error("Unable to open baseUrl", e);
             }
@@ -285,12 +221,12 @@ public class DesktopWebDriverFactory implements
             int pageLoadTimeout = Testerra.Properties.WEBDRIVER_TIMEOUT_SECONDS_PAGELOAD.asLong().intValue();
             int scriptTimeout = Testerra.Properties.WEBDRIVER_TIMEOUT_SECONDS_SCRIPT.asLong().intValue();
             try {
-                eventFiringWebDriver.manage().timeouts().pageLoadTimeout(pageLoadTimeout, TimeUnit.SECONDS);
+                eventFiringWebDriver.manage().timeouts().pageLoadTimeout(Duration.ofSeconds(pageLoadTimeout));
             } catch (Exception e) {
                 log().error("Could not set Page Load Timeout", e);
             }
             try {
-                eventFiringWebDriver.manage().timeouts().setScriptTimeout(scriptTimeout, TimeUnit.SECONDS);
+                eventFiringWebDriver.manage().timeouts().scriptTimeout(Duration.ofSeconds(scriptTimeout));
             } catch (Exception e) {
                 log().error("Could not set Script Timeout", e);
             }
@@ -333,7 +269,7 @@ public class DesktopWebDriverFactory implements
         try {
             newDriver = startNewWebDriverSession(desktopWebDriverRequest, sessionContext);
         } catch (final SetupException e) {
-            int ms = Testerra.Properties.WEBDRIVER_TIMEOUT_SECONDS_RETRY.asLong().intValue()*1000;
+            int ms = Testerra.Properties.SELENIUM_WEBDRIVER_CREATE_RETRY.asLong().intValue() * 1000;
             log().error(String.format("Error starting WebDriver. Trying again in %d seconds", (ms / 1000)), e);
             TimerUtils.sleep(ms);
             newDriver = startNewWebDriverSession(desktopWebDriverRequest, sessionContext);
@@ -348,46 +284,70 @@ public class DesktopWebDriverFactory implements
     private WebDriver startNewWebDriverSession(DesktopWebDriverRequest request, SessionContext sessionContext) {
 
         final Class<? extends RemoteWebDriver> driverClass;
+        final Class<? extends AbstractDriverOptions> optionClass;
         final String browser = request.getBrowser();
 
         switch (browser) {
             case Browsers.firefox:
                 driverClass = FirefoxDriver.class;
+                optionClass = FirefoxOptions.class;
                 break;
             case Browsers.ie:
                 driverClass = InternetExplorerDriver.class;
+                optionClass = InternetExplorerOptions.class;
                 break;
             case Browsers.chrome:
             case Browsers.chromeHeadless:
                 driverClass = ChromeDriver.class;
-                break;
-            case Browsers.phantomjs:
-                driverClass = PhantomJSDriver.class;
+                optionClass = ChromeOptions.class;
                 break;
             case Browsers.safari:
                 driverClass = SafariDriver.class;
+                optionClass = SafariOptions.class;
                 break;
             case Browsers.edge:
                 driverClass = EdgeDriver.class;
+                optionClass = EdgeOptions.class;
                 break;
             default:
                 throw new SystemException("Browser not supported: " + browser);
         }
 
         // Finalize capabilities
-        final DesiredCapabilities requestCapabilities = request.getDesiredCapabilities();
-        RemoteWebDriver webDriver;
+        WebDriver webDriver;
         try {
             if (request.getServerUrl().isPresent()) {
                 final URL seleniumUrl = request.getServerUrl().get();
-                final HttpCommandExecutor httpCommandExecutor = new HttpCommandExecutor(new HashMap<>(), seleniumUrl, new HttpClientFactory());
-                webDriver = new RemoteWebDriver(httpCommandExecutor, requestCapabilities);
-                webDriver.setFileDetector(new LocalFileDetector());
+
+                Capabilities capabilities = request.getCapabilities();
+                if (capabilities == null) {
+                    throw new SystemException("Cannot start browser session with empty browser options");
+                }
+                // Selenium default timeouts are
+                // read timeout: 180 sec
+                // connection timeout: 10 sec
+                // see {@link org.openqa.selenium.remote.http.ClientConfig#defaultConfig()}
+                // Testerra: read timeout reduced to 90 sec
+                ClientConfig clientConfig = ClientConfig
+                        .defaultConfig()
+                        .readTimeout(Duration.ofSeconds(Testerra.Properties.SELENIUM_REMOTE_TIMEOUT_READ.asLong()))
+                        .connectionTimeout(Duration.ofSeconds(Testerra.Properties.SELENIUM_REMOTE_TIMEOUT_CONNECTION.asLong()))
+                        .baseUrl(seleniumUrl);
+                CommandExecutor commandExecutor = new HttpCommandExecutor(clientConfig);
+                webDriver = new RemoteWebDriver(commandExecutor, capabilities);
+
+                ((RemoteWebDriver) webDriver).setFileDetector(new LocalFileDetector());
                 sessionContext.setNodeUrl(seleniumUrl);
             } else {
                 log().warn("Local WebDriver setups may cause side effects. It's highly recommended to use a remote Selenium configurations for all environments!");
-                Constructor<? extends RemoteWebDriver> constructor = driverClass.getConstructor(Capabilities.class);
-                webDriver = constructor.newInstance(requestCapabilities);
+
+                // Starting local webdriver needs caps as browser options
+                if (optionClass == request.getCapabilities().getClass()) {
+                    Constructor<? extends RemoteWebDriver> constructor = driverClass.getConstructor(optionClass);
+                    webDriver = constructor.newInstance(request.getCapabilities());
+                } else {
+                    throw new SystemException("Browser options cannot use for new session: \nRequired " + optionClass.getName() + ",\nProvided: " + request.getCapabilities().getClass().getName());
+                }
             }
         } catch (Exception e) {
             WebDriverSessionsManager.SESSION_STARTUP_ERRORS.put(new Date(), e);
@@ -397,34 +357,15 @@ public class DesktopWebDriverFactory implements
         return webDriver;
     }
 
-    private File getPhantomJSBinary() {
-        if (phantomjsFile == null) {
-            log().info("Unpacking phantomJS...");
-            try {
-                phantomjsFile = Phanbedder.unpack(); //Phanbedder to the rescue!
-            } catch (Exception e) {
-                if (e.getMessage() != null && e.getMessage().toLowerCase().contains("failed to make target directory")) {
-                    File tmp = new File(FileUtils.getTempDirectory(), "phantomjs" + System.currentTimeMillis());
-                    phantomjsFile = Phanbedder.unpack(tmp);
-                } else {
-                    throw e;
-                }
-            }
-            log().info("Unpacked phantomJS to: " + phantomjsFile);
-        }
-        return phantomjsFile;
-    }
-
     @Override
     public List<String> getSupportedBrowsers() {
-        return Arrays.asList(
-            Browsers.safari,
-            Browsers.ie,
-            Browsers.chrome,
-            Browsers.chromeHeadless,
-            Browsers.edge,
-            Browsers.firefox,
-            Browsers.phantomjs
+        return List.of(
+                Browsers.safari,
+                Browsers.ie,
+                Browsers.chrome,
+                Browsers.chromeHeadless,
+                Browsers.edge,
+                Browsers.firefox
         );
     }
 
